--- a/style.css
+++ b/style.css
@@ -1,23 +1,45 @@
+* {
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     font-family: 'Lucida Console', 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: #aaaaaa;
     background-color: #222222;
+    margin: 50px 200px;
+}
+
+.banner {
+    height: 260px;
+    background-image: url(images/banner1.jpg);
+    /* display: inline-block; */
+    vertical-align: middle;
+    padding: 0 50px;
+}
+
+.banner2 {
+    display: inline-block;
+    height: fit-content;
+    vertical-align: middle;
+    padding: 0px;
 }
 
 h1 {
     font-family: "Bitcount Grid Double", 'Lucida Console', 'Lucida Sans';
     color: #93199e;
-    font-size: 44pt;
-    font-weight: 444;
-    max-width: 50%;
+    font-size: 55pt;
+    font-weight: 350;
+    /* max-width: 50%; */
 }
 
 h2 {
     font-family: "Bitcount Grid Double", 'Lucida Console', 'Lucida Sans';
     color: #72199e;
-    font-size: 22pt;
-    font-weight: 444;
-    max-width: 50%;
+    font-size: 33pt;
+    font-weight: 350;
+    /* max-width: 50%; */
 }
 
 p {
@@ -45,6 +67,11 @@ figure {
     line-height: 22pt;
 }
 
+header {
+    /* padding: 20px 20px; */
+    background-color: #411f28;
+}
+
 footer {
     text-align: center;
 }
@@ -68,13 +95,61 @@ a:visited {
     text-decoration: underline;
 }
 
+hr {
+    border: 10px;
+}
+
+.marginCenter {
+    width: 0 100%;
+    margin: 0 auto;
+}
+
+div {
+    border-width: 0px;
+}
+
+.divinline {
+      display: inline;
+}
+
+.diva {
+    margin: 80px auto;
+    /* padding: 0px 0px; */
+}
+
+.divb {
+    border-left: 20px;
+    border-right: 20px;
+    border-left-color: #b170ff;
+    border-right-color: #b170ff;
+}
+
+.middle {
+    height: 100%;
+    width: 100%;
+    vertical-align: middle;
+}
+
+.summary {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 4px solid #782049;
+    border-width: 0 0 4px 0;
+}
+
+.tablebanner {
+    background-color: #411f28;
+    margin: 0 auto;
+}
+
 /* 
-font-weight property-css font weight
-font-style property - font-style
-<em> element-pixels, % and em
-<strong> element-syntax#strong
-line-height property-height
-text-align property-text align
-nested selector - nested selector
-pseudo-class selector - pseudo-class
+margin property
+padding property
+border properties
+setting a single side of one of the above properties
+setting the width and height of a content area in percent
+use of a class selector
+use of an identifier (ID) selector
 */
